<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">RecipeApp</string>
    <string name="search_bar_hint">Search for a recipe</string>
    <string name="tv_no_recipe">No recipe</string>
    <string name="recipe_image">recipe_image</string>
    <string name="favorite_recipe">Favorite recipe</string>
    <string name="tv_recipe_title">Recipe title</string>
    <string name="social_rank_placeholder">9.98</string>
    <string name="recipe_image_content_description">Recipe Image</string>
    <string name="ingredients_placeholder">Ingredients</string>
    <string name="title_favorite">Favorite</string>
    <string name="fab_to_favorite">Add to Favorite</string>
    <string name="tv_ingredients_title">Recipe Ingredients</string>
    <string name="recommended_recipes">Give it a shot</string>
    <string name="search_recommendation_title">✨ Try something like</string>
    <string name="food_recipe_placeholder" tools:keep="@string/food_recipe_placeholder">Food Recipe</string>
    <string name="search_result" tools:keep="@string/search_result">Search result</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="coming_soon">* Coming soon</string>
    <string name="ingredients_amount_placeholder">5 items</string>
    <string name="craving_text">What are you craving today?</string>
    <string name="view_recipe">View recipe</string>

    <string-array name="search_recommendation">
        <item>apple</item>
        <item>tomato</item>
        <item>cucumber</item>
        <item>broccoli</item>
        <item>strawberry</item>
        <item>raspberry</item>
        <item>donuts</item>
        <item>curry</item>
    </string-array>
</resources>