<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollable_recipe_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".feature.discovery.ui.DetailFragment">

    <LinearLayout
        android:id="@+id/scrollview_child_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:forceHasOverlappingRendering="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/img_recipe_photo"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/recipe_image_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:id="@+id/recipe_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/img_recipe_photo">

            <TextView
                android:id="@+id/tv_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_recipe_title" />

            <TextView
                android:id="@+id/tv_recipe_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_recipe_title" />

            <TextView
                android:id="@+id/tv_recipe_social_rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_rank_placeholder" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/ingredients_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintTop_toBottomOf="@id/recipe_info">

            <LinearLayout
                android:id="@+id/rv_ingredients_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    tools:layout_editor_absoluteX="24dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_to_favorite"
            app:srcCompat="@drawable/favorite_border" />
    </LinearLayout>
</ScrollView>