<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="12dp"
    android:background="@color/tw_slate_100"
    android:backgroundTint="@color/tw_slate_100"
    card_view:cardCornerRadius="16dp"
    card_view:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_recipe_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/recipe_image"
            android:scaleType="centerCrop"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/recipe_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_recipe_image">

            <TextView
                android:id="@+id/tv_recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:maxLines="3"
                android:textColor="@color/tw_emerald_500"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/tv_recipe_title" />

            <TextView
                android:id="@+id/tv_recipe_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                tools:text="recipe publisher" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recipe_cta_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tw_slate_200"
            android:orientation="horizontal"
            android:padding="12dp"
            card_view:layout_constraintTop_toBottomOf="@id/recipe_content">

            <TextView
                style="@style/baseTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_recipe"
                android:textAlignment="textEnd"
                android:textColor="@color/tw_slate_950"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>